src/gpu/types.h

/**
 * The (u,v,w) coordinates of a baseline. They are in units of metres.
 */
typedef struct UVW {
    /// u coordinate [metres]
    FLOAT u;
    /// v coordinate [metres]
    FLOAT v;
    /// w coordinate [metres]
    FLOAT w;
} UVW;
/**
 * The LMN coordinates of a sky-model component (prepared for application in the
   RIME).
 */
typedef struct LmnRime {
    /// l coordinate [dimensionless]
    FLOAT l;
    /// m coordinate [dimensionless]
    FLOAT m;
    /// n coordinate [dimensionless]
    FLOAT n;
} LmnRime;
/**
 * Parameters describing a Gaussian (also applicable to shapelets).
 */
typedef struct GaussianParams {
    /// Major axis size [radians]
    FLOAT maj;
    /// Minor axis size [radians]
    FLOAT min;
    /// Position angle [radians]
    FLOAT pa;
} GaussianParams;
/**
 * Parameters describing a shapelet coefficient.
 */
typedef struct ShapeletCoeff {
    FLOAT value;
    unsigned char n1;
    unsigned char n2;
} ShapeletCoeff;
/**
 * (u,v) coordinates for a shapelet. W isn't used, so we're a bit more efficient
 * by not using UVW.
 */
typedef struct ShapeletUV {
    /// u coordinate [metres]
    FLOAT u;
    /// v coordinate [metres]
    FLOAT v;
} ShapeletUV;
/**
 * Common things needed to perform modelling. All pointers are to device
 * memory.
 */
typedef struct Addresses {
    const int num_freqs;
    const int num_vis;
    const int num_baselines;
    const FLOAT *d_freqs;
    const FLOAT *d_shapelet_basis_values;
    const int num_unique_beam_freqs;
    const int *d_tile_map;
    const int *d_freq_map;
    const int *d_tile_index_to_unflagged_tile_index_map;
} Addresses;
/**
 * All the parameters needed to describe point-source components.
 */
typedef struct Points {
    const int num_power_laws;
    const LmnRime *power_law_lmns;
    /// Instrumental flux densities calculated at 150 MHz.
    const JONES *power_law_fds;
    /// Spectral indices.
    const FLOAT *power_law_sis;

    const int num_curved_power_laws;
    const LmnRime *curved_power_law_lmns;
    /// Instrumental flux densities calculated at 150 MHz.
    const JONES *curved_power_law_fds;
    /// Spectral indices.
    const FLOAT *curved_power_law_sis;
    /// Spectral curvatures.
    const FLOAT *curved_power_law_qs;

    const int num_lists;
    const LmnRime *list_lmns;
    /// Instrumental (i.e. XX, XY, YX, XX).
    const JONES *list_fds;
} Points;
/**
 * All the parameters needed to describe Gaussian components.
 */
typedef struct Gaussians {
    const int num_power_laws;
    const LmnRime *power_law_lmns;
    /// Instrumental flux densities calculated at 150 MHz.
    const JONES *power_law_fds;
    /// Spectral indices.
    const FLOAT *power_law_sis;
    const GaussianParams *power_law_gps;

    const int num_curved_power_laws;
    const LmnRime *curved_power_law_lmns;
    /// Instrumental flux densities calculated at 150 MHz.
    const JONES *curved_power_law_fds;
    /// Spectral indices.
    const FLOAT *curved_power_law_sis;
    /// Spectral curvatures.
    const FLOAT *curved_power_law_qs;
    const GaussianParams *curved_power_law_gps;

    const int num_lists;
    const LmnRime *list_lmns;
    /// Instrumental (i.e. XX, XY, YX, XX).
    const JONES *list_fds;
    const GaussianParams *list_gps;
} Gaussians;
/**
 * All the parameters needed to describe Shapelet components.
 */
typedef struct Shapelets {
    const int num_power_laws;
    const LmnRime *power_law_lmns;
    /// Instrumental flux densities calculated at 150 MHz.
    const JONES *power_law_fds;
    /// Spectral indices.
    const FLOAT *power_law_sis;
    const GaussianParams *power_law_gps;
    const ShapeletUV *power_law_shapelet_uvs;
    const ShapeletCoeff *power_law_shapelet_coeffs;
    const int *power_law_num_shapelet_coeffs;

    const int num_curved_power_laws;
    const LmnRime *curved_power_law_lmns;
    /// Instrumental flux densities calculated at 150 MHz.
    const JONES *curved_power_law_fds;
    /// Spectral indices.
    const FLOAT *curved_power_law_sis;
    /// Spectral curvatures.
    const FLOAT *curved_power_law_qs;
    const GaussianParams *curved_power_law_gps;
    const ShapeletUV *curved_power_law_shapelet_uvs;
    const ShapeletCoeff *curved_power_law_shapelet_coeffs;
    const int *curved_power_law_num_shapelet_coeffs;

    const int num_lists;
    const LmnRime *list_lmns;
    /// Instrumental (i.e. XX, XY, YX, XX).
    const JONES *list_fds;
    const GaussianParams *list_gps;
    const ShapeletUV *list_shapelet_uvs;
    const ShapeletCoeff *list_shapelet_coeffs;
    const int *list_num_shapelet_coeffs;
} Shapelets;