src/cuda/model_single.rs

                ::std::ptr::addr_of!((*ptr).list_gps) as usize - ptr as usize
            },
            160usize,
            concat!(
                "Offset of field: ",
                stringify!(Shapelets),
                "::",
                stringify!(list_gps)
            )
        );
    }
    test_field_list_gps();
    fn test_field_list_shapelet_uvs() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<Shapelets>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).list_shapelet_uvs) as usize - ptr as usize
            },
            168usize,
            concat!(
                "Offset of field: ",
                stringify!(Shapelets),
                "::",
                stringify!(list_shapelet_uvs)
            )
        );
    }
    test_field_list_shapelet_uvs();
    fn test_field_list_shapelet_coeffs() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<Shapelets>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).list_shapelet_coeffs) as usize - ptr as usize
            },
            176usize,
            concat!(
                "Offset of field: ",
                stringify!(Shapelets),
                "::",
                stringify!(list_shapelet_coeffs)
            )
        );
    }
    test_field_list_shapelet_coeffs();
    fn test_field_list_num_shapelet_coeffs() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<Shapelets>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).list_num_shapelet_coeffs) as usize - ptr as usize
            },
            184usize,
            concat!(
                "Offset of field: ",
                stringify!(Shapelets),
                "::",
                stringify!(list_num_shapelet_coeffs)
            )
        );
    }
    test_field_list_num_shapelet_coeffs();
}
pub const POWER_LAW_FD_REF_FREQ: f32 = 150000000.0;
extern "C" {
    #[doc = " Generate sky-model visibilities for a single timestep given multiple"]
    #[doc = " sky-model point-source components."]
    #[doc = ""]
    #[doc = " `points` contains coordinates and flux densities for their respective"]
    #[doc = " component types. The components are further split into \"power law\", \"curved"]
    #[doc = " power law\" and \"list\" types; this is done for efficiency. For the list types,"]
    #[doc = " the flux densities (\"fds\") are two-dimensional arrays, of which the first"]
    #[doc = " axis corresponds to frequency and the second component."]
    #[doc = ""]
    #[doc = " `a` is the populated `Addresses` struct needed to do any sky modelling."]
    #[doc = ""]
    #[doc = " `d_uvws` has one element per baseline."]
    #[doc = ""]
    #[doc = " `d_beam_jones` is the beam response used for each unique tile, unique"]
    #[doc = " frequency and direction. The metadata within `a` allows disambiguation of"]
    #[doc = " which tile and frequency should use which set of responses."]
    pub fn model_points(
        points: *const Points,
        a: *const Addresses,
        d_uvws: *const UVW,
        d_beam_jones: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Generate sky-model visibilities for a single timestep given multiple"]
    #[doc = " sky-model Gaussian components. See the documentation of `model_points` for"]
    #[doc = " more info."]
    pub fn model_gaussians(
        gaussians: *const Gaussians,
        a: *const Addresses,
        d_uvws: *const UVW,
        d_beam_jones: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Generate sky-model visibilities for a single timestep given multiple"]
    #[doc = " sky-model shapelet components. See the documentation of `model_points` for"]
    #[doc = " more info."]
    pub fn model_shapelets(
        shapelets: *const Shapelets,
        a: *const Addresses,
        d_uvws: *const UVW,
        d_beam_jones: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
